--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.11.1",
     "react": "^18.3.1",
+    "react-context": "^0.0.3",
     "react-dom": "^18.3.1",
+    "react-google-button": "^0.8.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
